<resources>
    <string name="app_name">RoomApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name   </string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="_25">-25</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
